liblab SDK update for version v1.0.0